--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\larissa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/aluno/.netbeans/12.6/build.properties
