--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/OnMed.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\larissa\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.28.jar=..\\mysql-connector-java-8.0.28.jar
 file.reference.mysql-connector-java-8.0.28.jar-1=../../../Downloads/jar_files/mysql-connector-java-8.0.28.jar
 includes=**
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar-1}
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
